ingress/onewo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: demo-app
spec:
  tls:
  - hosts:   
    - id.onewo.com
    secretName: onewo.com-tls
  rules:
    # eg  www.vankeservice.com
  - host: id.onewo.com
    http:
      paths:
      - path: /
        backend:
          service:
            name: demo-app
            port:
              name: http
        pathType: ImplementationSpecific
